--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -19,10 +19,10 @@ vim \
 libpng-dev \
 libpq-dev
 
-RUN rm /etc/apache2/mods-enabled/mpm_prefork.conf
-RUN rm /etc/apache2/mods-enabled/mpm_prefork.load
+RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.conf
+RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.load
 
-COPY . /var/www/html
+COPY ./ /var/www/html
 
 RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
 RUN /bin/sh -c a2enmod rewrite
