--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -1,29 +1,28 @@
 FROM php:7.4-apache
+
+# 設定ファイルをdockerコンテナ内のPHP、Apacheに読み込ませる
+# ADD：ローカルのファイルをDockerコンテナ内にコピーする
+ADD php.ini /usr/local/etc/php/
+ADD 000-default.conf /etc/apache2/sites-enabled/
+
+# Composerのインストール
+# RUN：コンテナ内でコマンド実行する
+RUN cd /usr/bin && curl -s http://getcomposer.org/installer | php && ln -s /usr/bin/composer.phar /usr/bin/composer
+
+# ミドルウェアのインストール
+RUN apt-get update \
+&& apt-get install -y \
+git \
+zip \
+unzip \
+vim \
+libpng-dev \
+libpq-dev
+
+RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.conf
+RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.load
+
 COPY ./ /var/www/html
 
-# # 設定ファイルをdockerコンテナ内のPHP、Apacheに読み込ませる
-# # ADD：ローカルのファイルをDockerコンテナ内にコピーする
-# ADD php.ini /usr/local/etc/php/
-# ADD 000-default.conf /etc/apache2/sites-enabled/
-
-# # Composerのインストール
-# # RUN：コンテナ内でコマンド実行する
-# RUN cd /usr/bin && curl -s http://getcomposer.org/installer | php && ln -s /usr/bin/composer.phar /usr/bin/composer
-
-# # ミドルウェアのインストール
-# RUN apt-get update \
-# && apt-get install -y \
-# git \
-# zip \
-# unzip \
-# vim \
-# libpng-dev \
-# libpq-dev
-
-# RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.conf
-# RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.load
-
-# COPY ./ /var/www/html
-
-# RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
-# RUN /bin/sh -c a2enmod rewrite
+RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
+RUN /bin/sh -c a2enmod rewrite
