--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -24,5 +24,5 @@ RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.load
 
 COPY ./ /var/www/html
 
-RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
+# RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
 RUN /bin/sh -c a2enmod rewrite
