--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -19,10 +19,10 @@ vim \
 libpng-dev \
 libpq-dev
 
-RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.conf
-RUN rm -rf /etc/apache2/mods-enabled/mpm_prefork.load
+RUN rm -rf /etc/apache2/mods-enabled/mpm_event.conf
+RUN rm -rf /etc/apache2/mods-enabled/mpm_event.load
 
 COPY ./ /var/www/html
 
-# RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
+RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
 RUN /bin/sh -c a2enmod rewrite
