--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -22,7 +22,7 @@ libpq-dev
 RUN rm -rf /etc/apache2/mods-enabled/mpm_event.conf
 RUN rm -rf /etc/apache2/mods-enabled/mpm_event.load
 
-COPY ./ /var/www/html
+COPY ./ /app
 
 RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
 RUN /bin/sh -c a2enmod rewrite
