--- a/heroku.yml
+++ b/heroku.yml
@@ -30,8 +30,8 @@ setup:
     PUSHER_APP_SECRET: 20a8d3949b0da676bd3f
     PUSHER_APP_CLUSTER: ap3
 build:
-  content: .
   docker:
     web: ./docker/production/Dockerfile
+    context: .
 run:
   web: vendor/bin/heroku-php-apache2 public/
