--- a/heroku.yml
+++ b/heroku.yml
@@ -31,7 +31,6 @@ setup:
     PUSHER_APP_CLUSTER: ap3
 build:
   docker:
-    web: ./docker/production/Dockerfile
-    context: .
+    web: ./Dockerfile
 run:
   web: vendor/bin/heroku-php-apache2 public/
