--- a/000-default.conf
+++ b/000-default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-       ServerAdmin webmaster@localhost
+       ServerAdmin game-recruit-back.herokuapp.com
        DocumentRoot /var/www/html/public
        ErrorLog ${APACHE_LOG_DIR}/error.log
        CustomLog ${APACHE_LOG_DIR}/access.log combined
